--- a/Practical 2 Analysis with R.ipynb
+++ b/Practical 2 Analysis with R.ipynb
@@ -622,7 +622,9 @@
    "source": [
     "### Creating 'Table 1'<a class=\"anchor\" id=\"section2.5\"></a>\n",
     "\n",
-    "Whilst we are talking about presentations and publications, it is worth mentioning 'Table 1'. Most quantitative reports normally need a descriptive 'Table 1' which shows how the variables included in your model relate to your outcome variable. We can use `display_html` from the `IRdisplay` package to quickly convert a dataframe to an html table as follows:"
+    "Whilst we are talking about presentations and publications, it is worth mentioning 'Table 1'. Most quantitative reports normally need a descriptive 'Table 1' which shows how the variables included in your model relate to your outcome variable. \n",
+    "\n",
+    "Before we do this, we might want to make use of the ```label()``` function. First we will give each variable a more readable label using the label() function. ```label()``` creates labels that will be printed in our table but does not change the variable names stored on the system. The below code changes the label for a set of variables variables in the ```analysis_data``` object:"
    ]
   },
   {
@@ -633,17 +635,16 @@
    },
    "outputs": [],
    "source": [
-    "# First we will give each variable a more readable label using the label() function\n",
-    "# This will be printed in our table but does not change the variable names\n",
-    "# you can see this my running head(analysis_data) where the variable names are the same\n",
-    "\n",
     "label(analysis_data$urban_rural_2cat) <- \"Urban/Rural\"\n",
     "label(analysis_data$smoking_rate) <- \"Smoking Rate\"\n",
-    "label(analysis_data$simd_quintile) <- \"SIMD Quintile\"\n",
-    "\n",
-    "IRdisplay::display_html(table1(~ urban_rural_2cat + smoking_rate | simd_quintile, data = analysis_data, overall = \"Total\"))\n",
-    "#You need to use `display_html` from the `IRdisplay` package to render this table from within Noteable\n",
-    "#This is not required from within RStudio."
+    "label(analysis_data$simd_quintile) <- \"SIMD Quintile\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If you run ```head(analysis_data)``` below, you can see that this hasnt changed the variable names in the data stored on the computer:"
    ]
   },
   {
@@ -659,9 +660,31 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Now, with our nicely labelled data We can use `display_html` from the `IRdisplay` package to quickly convert a dataframe to a nicely formatted \"table 1\" style table of descriptive statistics. In this case this will save it as a HTML table:\n",
+    "\n",
+    "NOTE: if you havent come across the ```::``` symbol before, all it means is \"use a particular function from a particular package\" (in this case the `display_html` <b>function</b> from the `IRdisplay` <b>package</b>)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "IRdisplay::display_html(table1(~ urban_rural_2cat + smoking_rate | simd_quintile, data = analysis_data, overall = \"Total\"))\n",
+    "#You need to use `display_html` from the `IRdisplay` package to render this table from within Noteable\n",
+    "#This is not required from within RStudio."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Exercise<a class=\"anchor\" id=\"exercise2\"></a>\n",
     "\n",
-    "1. Have a go at producing some plots of some of the other variables. Use the code in the section above to help you!"
+    "1. Have a go at producing some plots of some of the other variables. Use the code in the section above to help you! \n",
+    "\n",
+    "N.B No solution for this one as it is up to you what plots you want to create! "
    ]
   },
   {
