--- a/Practical 2 Analysis with R.ipynb
+++ b/Practical 2 Analysis with R.ipynb
@@ -624,7 +624,7 @@
     "\n",
     "Whilst we are talking about presentations and publications, it is worth mentioning 'Table 1'. Most quantitative reports normally need a descriptive 'Table 1' which shows how the variables included in your model relate to your outcome variable. \n",
     "\n",
-    "Before we do this, we might want to make use of the ```label()``` function. First we will give each variable a more readable label using the label() function. ```label()``` creates labels that will be printed in our table but does not change the variable names stored on the system. The below code changes the label for a set of variables variables in the ```analysis_data``` object:"
+    "Before we do this, we might want to make use of the ```label()``` function. ```label()``` creates labels that will be printed in our table but does not change the variable names stored on the system. The below code changes the label for a set of variables in the ```analysis_data``` object:"
    ]
   },
   {
@@ -660,7 +660,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now, with our nicely labelled data We can use `display_html` from the `IRdisplay` package to quickly convert a dataframe to a nicely formatted \"table 1\" style table of descriptive statistics. In this case this will save it as a HTML table:\n",
+    "But when we go to create a nice \"table 1\" the labels we created will be used. Let's do this using ```display_html``` from the ```IRdisplay``` package to quickly convert a dataframe to a nicely formatted table of descriptive statistics. In this case this will save it as a HTML table:\n",
     "\n",
     "NOTE: if you havent come across the ```::``` symbol before, all it means is \"use a particular function from a particular package\" (in this case the `display_html` <b>function</b> from the `IRdisplay` <b>package</b>)."
    ]
